Fix edge cases with empty parcels. Explicitly decorate all items without italics